--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "bikeion": [
+    "production": [
       ">0.2%",
       "not dead",
       "not op_mini all"
