--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "Nguyen Hai Nam",
+  "author": "Group 13",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -18,7 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "stripe": "^12.12.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0"
