--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "redux-form": "^8.3.10",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
