--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -23,20 +23,20 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./backend
-          file: ./Dockerfile
+          file: .backend/Dockerfile
           push: true
           tags: linhpham39/bike_rental_system_backend:latest
       - name: build and push client image
         uses: docker/build-push-action@v2
         with:
           context: ./frontend
-          file: ./Dockerfile
+          file: .frontend/Dockerfile
           push: true
           tags: linhpham39/bike_rental_system_frontend:latest
       - name: build and push io server
         uses: docker/build-push-action@v2
         with:
           context: ./io_server
-          file: ./Dockerfile
+          file: .server/Dockerfile
           push: true
           tags: linhpham39/bike_rental_system_io_server:latest
